appId: ca.maxbld.app
---
- launchApp
- tapOn: "Save Lead"
- assertVisible: "Want us to alert you"
- tapOn: "Allow"
- tapOn: "Allow"
- openLink: "maxbld://(app)/lead?id=permit_test_123"
- assertVisible: "Permit Details"
