appId: ca.maxbld.app
---
- launchApp
- tapOn: "Map"
- assertVisible: "Map View"
- swipe:
    direction: LEFT
    duration: 500
- tapOn:
    id: "map-marker-0"
- assertVisible: "Permit Details"
